fix natural number to prime number, add freeze action

--- a/src/style/style.scss
+++ b/src/style/style.scss
@@ -35,6 +35,10 @@
       transition-delay: 0.3s;
     }
   }
+  &.freeze {
+    pointer-events: none;
+    cursor: auto;
+  }
 }
 .main-card__number {
   opacity: 0;
